--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ __pycache__/
 *.pyc
 
 # Data outputs
-leaders_data.json
-leaders_data.csv
+leaders.json
+leaders.csv
 
 # Jupyter checkpoints
 .ipynb_checkpoints/
